Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.881 devel

****  Internal Verilation-time performance enhancements, bug1021. [Johan Bjork]

****  Fix stats file containing multiple unroll entries, bug1020. [Johan Bjork]

****  Fix using short parameter names on negative params, bug1022. [Duraid Madina]


* Verilator 3.880 2015-12-19

***   Support display %u, %v, %p, %z, bug989. [Johan Bjork]

****  Fix real parameters causing bad module names, bug992. [Johan Bjork]

****  Fix size-changing cast on packed struct, bug993. [Johan Bjork]

****  Fix function calls on arrayed interface, bug994. [Johan Bjork]

****  Fix arrayed interfaces, bug879, bug1001. [Todd Strader]

****  Fix constant function assigned to packed structs, bug997. [Johan Bjork]

****  Fix interface inside generate, bug998. [Johan Bjork]

****  Fix $signed casts under generates, bug999. [Clifford Wolf]

****  Fix genvar constant propagation, bug1003. [Johan Bjork]

****  Fix parameter constant propagation from package, bug1004. [Johan Bjork]

****  Fix array slicing of non-const indexes, bug1006. [Johan Bjork]

****  Fix dotted generated array error, bug1005. [Jeff Bush, Johan Bjork]

****  Fix error instead of warning on large concat, msg1768. [Paul Rolfe]

****  Fix $bitstoreal constant propagation, bug1012. [Jonathan Kimmitt]

****  Fix model restore crash, bug1013. [Jason McMullan]

****  Fix arrayed instances to unpacked of same size, bug1015. [Varun Koyyalagunta]

****  Fix slices of unpacked arrays with non-zero LSBs.

****  Fix ternary operation with unpacked array, bug1017. [Varun Koyyalagunta].


* Verilator 3.878 2015-11-01

**    Add --vpi flag, and fix VPI linkage, bug969. [Arthur Kahlich]

**    Support genvar indexes into arrayed cells, bug517.  [Todd Strader]

**    Support $sformatf, bug977. [Johan Bjork]
